// See the License for the specific language governing permissions and
// limitations under the License.

= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].


== 0.5.3 (16 May 2020)

=== Added

  - Allow filtering what members, enum values, inner classes, and exceptions get included when
      using api.insert().
  - Show progress bars for long running tasks.
  - Support for documenting python code with the help of doxypypy.
  - Specify a required version of AsciiDoxy in the adoc files.

=== Changed

  - Default log level decreased to warnings.


== 0.5.2 (24 Apr 2020)

=== Added

  - Support for free functions in C++


== 0.5.1 (22 Apr 2020)

=== Added

  - Added option multi\_page\_link to include() method, so an included adoc file is generated but
    not linked to in multi-page mode.


== 0.5.0 (21 Apr 2020)

=== Added

  - When api.insert or api.link is ambiguous, all matching candidates are shown.

=== Changed

  - Links that are part of an inserted element are also considered when looking for dangling links.

=== Fixed

  - Report full error information when collection fails.


== 0.4.3 (2 Apr 2020)

=== Fixed

* Nested enums are no longer ignored in Java.
* Fix enum template for Java. Descriptions are now complete and in the right column.


== 0.4.2 (30 Mar 2020)

=== Fixed

* Ignore friend declarations for C{plus}{plus}.
* Improve handling of Java generics.
* Improve type handling for Objective C.


== 0.4.1 (27 Mar 2020)

=== Added

* Disambiguate function overloads (and other callables) based on the types of the parameters.

=== Changed

* Search by name with an originating namespace now also finds partial namespace overlaps.
* Correctly take the originating namespace into account when resolving type references.

== 0.4.0 (19 Mar 2020)

=== Added
